tdf#113258 DOCX import: fix beforeAutospacing for shape first paragraph

Commit c761df1e42fd11acc5fc05b0baacd803c3788ca6 (tdf#84678 DOCX import:
fix handling of textbox margins, 2016-10-25) uncovered a previously
harder to notice problem that single-paragraph shapes have an incorrect
upper paragraph margin for the first paragraph. Now that the shape
margins are correct this problematic paragraph margin causes crop of the
shape text.

Fix the problem by adapting the DOCX import to the WW8 import's
SwWW8ImplReader::AppendTextNode() (the "If this is the first paragraph
in the document" part), where it seems the first paragraph is not only
the literally first paragraph in the document, but also the first
paragraph of shapes as well.

(cherry picked from commit f737c9386a605cb7d8c9dbc210c557f98f6cdc19)

Conflicts:
	writerfilter/source/dmapper/DomainMapper.cxx

Change-Id: I9d99b9cfabae2c9a7c33eefefb5a9f008669e93d