writerfilter/source/dmapper/DomainMapper.cxx
@@ -2114,7 +2114,27 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, const PropertyMapPtr& rContext )
         StyleSheetTablePtr pStyleTable = m_pImpl->GetStyleSheetTable();
         const OUString sConvertedStyleName = pStyleTable->ConvertStyleName( sStringValue, true );
         if (m_pImpl->GetTopContext() && m_pImpl->GetTopContextType() != CONTEXT_SECTION)
+        {
             m_pImpl->GetTopContext()->Insert( PROP_PARA_STYLE_NAME, uno::makeAny( sConvertedStyleName ));
+
+            if (m_pImpl->GetIsFirstParagraphInShape())
+            {
+                // First paragraph in shape: see if we need to disable
+                // paragraph top margin from style.
+                StyleSheetEntryPtr pEntry
+                    = m_pImpl->GetStyleSheetTable()->FindStyleSheetByConvertedStyleName(
+                        sConvertedStyleName);
+                if (pEntry)
+                {
+                    boost::optional<PropertyMap::Property> pParaAutoBefore
+                        = pEntry->pProperties->getProperty(
+                            PROP_PARA_TOP_MARGIN_BEFORE_AUTO_SPACING);
+                    if (pParaAutoBefore)
+                        m_pImpl->GetTopContext()->Insert(PROP_PARA_TOP_MARGIN,
+                                                         uno::makeAny(static_cast<sal_Int32>(0)));
+                }
+            }
+        }
     }
     break;
     case NS_ooxml::LN_EG_RPrBase_rStyle:
@@ -2978,6 +2998,8 @@ void DomainMapper::lcl_startShape(uno::Reference<drawing::XShape> const& xShape)
         // No context? Then this image should not appear directly inside the
         // document, just save it for later usage.
         m_pImpl->PushPendingShape(xShape);
+
+    m_pImpl->SetIsFirstParagraphInShape(true);
 }
 
 void DomainMapper::lcl_endShape( )
